# Github-Fetcher

./: Dockerfile  Makefile  README.md  inputvalidation.py
cli-app/: code.py  github_validator.py  main.py  requirements.txt  sample_config.json  schema.py  valid_config.json
cli-app-poetry/: README.md  __main__.py  pyproject.toml
cli-app-poetry/cli_app_poetry/: __main__.py  constants.py  github_repo_data.csv  main.py
cli-app-poetry/cli_app_poetry/fetchers/: api.py
cli-app-poetry/cli_app_poetry/validators/: github_validator.py  sample.json  schema.py  valid.json  valid_config.json
cli-app-poetry/tests/: test_api.py  test_api_mocker.py  test_input_validation.py
cli-app/tests/: tests_validator.py
myenv/: pyvenv.cfg
tests/: test_api_mocker.py  test_input_validation.py
