[project]
name = "cli-app-poetry"
version = "0.1.0"
description = ""
authors = [
    {name = "marva-sequioaat",email = "marva@sequoiaat.com"}
]

packages = [{include = "cli_app_poetry"}]
include = [
   "cli_app_poetry/validators/sample.json",
]


requires-python = ">=3.11"
dependencies = [
    "jsonschema (>=4.23.0,<5.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "requests-mock (>=1.12.1,<2.0.0)",
    "mocker (>=1.1.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]

[project.scripts]
cli-app-poetry = "cli_app_poetry.main:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-mock = "^3.14.0"






